argocd/apps/crab/crabserver/overlays/preprod/filebeat-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: filebeat-crab
  name: filebeat-crab
  namespace: crab
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: filebeat-crab
  template:
    metadata:
      annotations:
        prometheus.io/port: "18270"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: filebeat-crab
    spec:
      containers:
        - args:
            - bash
            - -c
            - filebeat -c /etc/filebeat.yml --path.data /data/filebeat/${MY_NODE_NAME}/data -e
          image: docker.elastic.co/beats/filebeat:8.5.1
          imagePullPolicy: IfNotPresent
          name: filebeat
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/log/pods
              name: varlogpods
              readOnly: true
            - mountPath: /var/log/containers
              name: varlogcontainers
              readOnly: true
            - mountPath: /etc/filebeat.yml
              name: config
              subPath: filebeat.yml
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /var/log/pods
            type: ""
          name: varlogpods
        - hostPath:
            path: /var/log/containers
            type: ""
          name: varlogcontainers
        - name: data
        - configMap:
            defaultMode: 416
            name: filebeat-crab-config
          name: config
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
