argocd/apps/crab/crabserver/overlays/preprod/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: logstash
  name: logstash
  namespace: crab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: logstash
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      creationTimestamp: null
      labels:
        app: logstash
    spec:
      containers:
        - args:
            - -f
            - /usr/share/logstash/pipeline/logstash.conf
          image: docker.elastic.co/logstash/logstash:8.1.3
          imagePullPolicy: IfNotPresent
          name: logstash
          ports:
            - containerPort: 5044
              name: logstash
              protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: 8Gi
            requests:
              cpu: 400m
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/share/logstash/config/logstash.yml
              name: config
              readOnly: true
              subPath: logstash.yml
            - mountPath: /usr/share/logstash/pipeline
              name: pipeline
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: logstash.conf
                path: logstash.conf
            name: logstash
          name: pipeline
        - configMap:
            defaultMode: 420
            items:
              - key: logstash.yml
                path: logstash.yml
            name: logstash
          name: config
