argocd/apps/crab/crabserver/overlays/preprod/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logstash
  name: logstash
  namespace: crab
spec:
  ports:
    - nodePort: 30044
      port: 5044
  selector:
    app: logstash
  type: NodePort
