argocd/apps/crab/crabserver/overlays/preprod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 137.138.55.102,137.138.123.132,188.185.38.247,188.185.115.204,188.185.101.116,188.184.75.82,137.138.154.184,188.184.73.32,188.185.89.202,188.185.89.194,137.138.157.32,137.138.62.154,188.184.31.220,137.138.31.95,188.185.114.255,188.185.25.202,188.185.78.114,137.138.54.240,188.184.117.46,188.185.29.242,188.185.31.221,188.185.22.29,188.185.30.204,188.185.18.13,188.185.14.65,188.185.81.186
  name: ing-crab
  namespace: crab
spec:
  rules:
    - host: cmsweb-k8s-prodsrv.cern.ch
      http:
        paths:
          - backend:
              service:
                name: crabserver
                port:
                  number: 8270
            path: /crabserver
            pathType: Prefix
